# fastapi

./: .env  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routers/: auth.py  users.py
app/controller/: __init__.py  auth_controller.py  user_controller.py
app/core/: config.py  container.py  logging.py  security.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_init.py
app/http/clients/: base.py  email_client.py
app/middlewares/: error_handler.py
app/models/: __init__.py  associations.py  comment.py  post.py  product.py  profile.py  tag.py  user.py
app/repositories/: base.py  user_repo.py
app/schemas/: auth.py  comment.py  common.py  post.py  tag.py  user.py
app/services/: auth_service.py  email_service.py  user_service.py
fastapi_user_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
