[project]
name = "fastapi-user-service"
version = "0.1.0"
description = "Advanced FastAPI microservice scaffold with DI, Repositories, Services, JWT, Alembic, and Async SQLAlchemy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "httpx>=0.27.2",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.9.0",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.12",
    "rich>=13.7.1",
]

[tool.uv]
# if you use 'uv' as python package manager (optional)

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
